# nudge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  docker-compose.yml  mise.toml  pyproject.toml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/components/: ChatWindow.tsx  InputBar.tsx  MessageBubble.tsx  StatusBar.tsx
app/src/hooks/: useWebSocket.ts
app/src/store/: chatStore.ts
app/src/types/: protocol.ts
config/: __init__.py  mcp_servers.py  prompts.py  settings.py
scripts/: deploy.sh  entrypoint.sh  nudge-update.service  nudge-update.timer  nudge.service  server-setup.sh  update-claude-code.sh
src/: coordinator.py  main.py
src/agent/: client.py  sessions.py
src/api/: history.py  message_tool.py  pool.py  server.py  tool_labels.py  ws.py
src/models/: nudge.py
src/nudge/: engine.py  evaluator.py  monitor.py  observer.py  store.py
src/telegram/: access.py  bot.py  handlers.py  history.py  message_tool.py  tool_labels.py
