[project]
name = "nudge"
version = "0.1.0"
description = "Personal AI assistant on Telegram powered by Claude Agent SDK"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]>=22.6",
    "claude-agent-sdk>=0.1.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
